<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              tools:context=".LoginActivity">


    <!-- Login progress -->


    <ScrollView
            android:id="@+id/login_form"
            android:background="@drawable/background_splash"
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_margin="20dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <TextView
                    android:layout_gravity="center"
                    android:scaleType="centerCrop"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    android:textColor="@color/senaCapSplashColor"
                    android:text="@string/senacap"/>


            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:padding="16dp"
                        android:background="@drawable/background_edit"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:padding="16dp"
                        android:background="@drawable/background_edit"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/email_sign_in_button"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:background="@drawable/background_login"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"/>
            <View
               android:layout_width="match_parent"
               android:id="@+id/view"
               android:layout_marginTop="20dp"
               android:background="@android:color/darker_gray"
               android:layout_height="2dp"/>

            <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:textAlignment="center"
               android:layout_gravity="center"
               android:textSize="12sp"
               android:text="@string/esqueceu_sua_senha"
               android:textColor="@android:color/black"/>
            <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_marginTop="10dp"
               android:layout_gravity="center"
               android:textAlignment="center"
               android:textSize="20sp"
               android:textStyle="bold"
               android:text="@string/login_rede_social"/>
            <LinearLayout
                    android:layout_marginTop="25dp"
               android:layout_gravity="center"
               android:orientation="horizontal"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
                <ImageView
                   android:id="@+id/google"
                   android:src="@drawable/ic_google"
                   android:padding="10dp"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"/>
                <ImageView
                        android:id="@+id/facebook"
                        android:padding="10dp"
                        android:src="@drawable/ic_facebook"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                <ImageView
                        android:id="@+id/twitter"
                        android:padding="10dp"
                        android:src="@drawable/ic_twitter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

            </LinearLayout>
      </LinearLayout>
    </ScrollView>
</LinearLayout>